# Tusho

./: .clang-format  .clang-tidy  .gitignore  .yamllint.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  composer.json  mkdocs.yml  phpcs.xml.dist  phpstan.neon.dist  phpunit.xml.dist
.github/: dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  coverage-guard.yml  dependency-review.yml  pages.yml  repo-quality.yml  reusable-status.yml  scorecards.yml
cmake/: ProjectWarnings.cmake  Sanitizers.cmake
docs/: Doxyfile  api-reference.md  architecture.md  database-schema.md  external-libraries.md  getting-started.md  index.md  local-workflow.md  logging-and-operations.md  testing-and-quality.md  wiki.md
docs/tutorials/: first-crawl.md  web-search.md
include/tusho/application/: crawler_application.hpp  run_configuration.hpp
include/tusho/database/: file_system_catalog_repository.hpp  sqlite_database_connection.hpp
include/tusho/filesystem/: file_system_crawler.hpp  file_system_entry_record.hpp  scan_statistics.hpp
include/tusho/logging/: structured_logger.hpp
scripts/: build.sh  enforce_php_coverage_threshold.php  run_crawler.sh  run_web_application.sh  setup_linux.sh  test.sh
src/: main.cpp
src/application/: crawler_application.cpp
src/database/: file_system_catalog_repository.cpp  sqlite_database_connection.cpp
src/filesystem/: file_system_crawler.cpp
src/logging/: structured_logger.cpp
tests/: CMakeLists.txt
tests/integration/: crawler_command_line_integration_tests.cpp  file_system_crawler_integration_tests.cpp
tests/support/: test_support.hpp
tests/unit/: database_and_application_tests.cpp  structured_logger_tests.cpp
web/config/: application_configuration.xml  application_configuration.xsd
web/public/: index.php
web/public/assets/: application.css
web/src/: ApplicationConfiguration.php  ApplicationConfigurationLoader.php  FileSystemCatalogRepository.php  FrontController.php  HtmlDocumentRenderer.php  WebRequestLogger.php  XmlDocumentRenderer.php
web/tests/: ApplicationConfigurationLoaderTest.php  FileSystemCatalogRepositoryTest.php  FrontControllerTest.php  HtmlDocumentRendererTest.php  WebRequestLoggerTest.php  XmlDocumentRendererTest.php
web/tests/Support/: TestDatabaseFactory.php
wiki/: Dockerfile  README.md  docker-compose.yml
wiki/seed/conf/: local.php
wiki/seed/pages/: beginner_tour.txt  crawler_explained.txt  quality_explained.txt  start.txt  web_application_explained.txt
